--- a/templates/overview_calendar_template.html
+++ b/templates/overview_calendar_template.html
@@ -14,7 +14,7 @@ $unitHead
 
 	  <div class="content secondary">
 		<br>
-		<h1 style="line-height: 30px;"> Discrete Math for CS</h1>
+		<h1 style="line-height: 30px;"> $mainTitle</h1>
     <br>
     
     $unitBoxes
